@@ -36,11 +36,7 @@ class Roda
         def _match_array(arg, rest=nil)
           return super unless rest
 
-          unless path = @remaining_path
-            e = @env
-            script = e[SCRIPT_NAME]
-            path = e[PATH_INFO]
-          end
+          path = @remaining_path
           captures = @captures
           caps = captures.dup
           arg.each do |v|
@@ -55,12 +51,7 @@ class Roda
 
               # Matching all remaining elements failed, reset state
               captures.replace(caps)
-              if @remaining_path
-                @remaining_path = path
-              else
-                e[SCRIPT_NAME] = script
-                e[PATH_INFO] = path
-              end
+              @remaining_path = path
             end
           end
           false
